TP-3/pod-blue.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-webapp-blue
  labels:
    app: web
spec:
  containers:
  - name: webapp-blue
    image: mmumshad/simple-webapp-color
    ports:
      containerPort: 8080
