TP-3/service-nodeport-web.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  ports:
  - targetPort: 8080
    port: 8081
    NodePort: 30008
  selector:
    app: web
